# file-storage-api

./: .gitignore  docker-compose.yml  main.py  pyproject.toml  readme.md  submissions.db
docs/: deploy.md
scripts/: run-compile.sh  run-format.sh
src/: api.py  constants.py  db.py  logging_config.py  utils.py
