[project]
name = "file-storage-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=24.1.0",
    "fastapi>=0.116.1",
    "gunicorn>=23.0.0",
    "pydantic[email]>=2.11.7",
    "pyright[nodejs]>=1.1.405",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "python-slugify>=8.0.4",
    "sqlalchemy>=2.0.43",
    "structlog>=25.4.0",
    "uvicorn[standard]>=0.35.0",
]

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "pyright>=1.1.405",
    "ruff>=0.12.12",
]
